Fixed spacing issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,7 +96,7 @@ nav span{
 
 .text{
   text-align: center;
-  margin-top: 75px;
+  margin-top: 90px;
 }
 
 .items{
@@ -128,7 +128,7 @@ nav span{
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 75px;
+  margin-top: 90px;
   position: relative;
   left: 90px;
 }
